--- a/Lab1/makefile
+++ b/Lab1/makefile
@@ -1,2 +1,2 @@
-main: main.cpp determinant.cpp readMatrix.cpp
+determinantSolver: main.cpp determinant.cpp readMatrix.cpp
 	g++ main.cpp determinant.cpp readMatrix.cpp -o determinantSolver
