--- a/Lab1/makefile
+++ b/Lab1/makefile
@@ -1,2 +1,14 @@
-determinantSolver: main.cpp determinant.cpp readMatrix.cpp
-	g++ main.cpp determinant.cpp readMatrix.cpp -o determinantSolver
+findDeterminant: main.o determinant.o readMatrix.o
+	g++ main.o determinant.o readMatrix.o -o findDeterminant
+
+main.o: main.cpp
+	g++ -c main.cpp
+
+determinant.o: determinant.cpp determinant.hpp
+	g++ -c determinant.cpp
+
+readMatrix.o: readMatrix.cpp readMatrix.hpp
+	g++ -c readMatrix.cpp
+
+clean:
+	rm *.o
