working grocery list
still a few minor things left to fix

--- a/GroceryList/makefile
+++ b/GroceryList/makefile
@@ -1,5 +1,5 @@
 program_name = grocery_list
-object_files = main.o Item.o
+object_files = main.o Item.o List.o menu.o
 
 grocery_list: $(object_files)
 	g++ $(object_files) -o $(program_name)
@@ -10,8 +10,20 @@ main.o: main.cpp
 Item.o: Item.cpp
 	g++ -c Item.cpp
 
+List.o: List.cpp
+	g++ -c List.cpp
+
+menu.o: menu.cpp
+	g++ -c menu.cpp
+
 clean:
 	rm *.o
+
+valgrind:
+	valgrind ./$(program_name)
+
+gdb:
+	gdb ./$(program_name)
 
 run:
 	./$(program_name)
