working university system
everything works

--- a/lab4/makefile
+++ b/lab4/makefile
@@ -1,8 +1,10 @@
-university_system: main.cpp
-	g++ -std=c++11 main.cpp -o university_system
+program_name = university_system
+
+university_system: main.cpp menu.cpp
+	g++ -std=c++11 main.cpp menu.cpp -o $(program_name)
 
 run:
 	./university_system
-	
+
 clean:
 	rm *.o
