--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ $RECYCLE.BIN/
 *.ftpconfig
 Lab2_Roy_Nicholas.pdf
 Lab2_Roy_Nicholas.zip
+Lab_3_Reflection.pdf
+lab4\notes
+Project_2_Reflection.pdf
