--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,4 @@ $RECYCLE.BIN/
 
 # My ignores
 *.ftpconfig
-Lab2_Roy_Nicholas.pdf
-Lab2_Roy_Nicholas.zip
-Lab_3_Reflection.pdf
-lab4\notes
-Project_2_Reflection.pdf
+*.pdf
